test/frontend/fail/void_variable.osl
void foo(void x) { void y; }
shader bar() {
}
